--- a/InStock/InStock.entitlements
+++ b/InStock/InStock.entitlements
@@ -2,13 +2,9 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>SchemeUserState</key>
-	<dict>
-		<key>InStock.xcscheme_^#shared#^_</key>
-		<dict>
-			<key>orderHint</key>
-			<integer>7</integer>
-		</dict>
-	</dict>
+	<key>com.apple.developer.in-app-payments</key>
+	<array>
+		<string>merchant.iti.InStock</string>
+	</array>
 </dict>
 </plist>
